Flare v1.02 (WIP, link soon)

Engine features:

* Support multiple campaign statuses for requirements in engine/titles.txt. (Justin Jacobs)
* Buttons that trigger Events can now be added to books. (Justin Jacobs)

Engine fixes:

* Fix crash on exit caused by not clearing the Hazard queue. (Justin Jacobs)
* Fix regression that caused a crash when configuring mods in the wrong order. (Justin Jacobs)
* Fix bug where player title wouldn't update after "unset_status". (Justin Jacobs)
* Fix potential NULL dereference in vendor window. (Justin Jacobs)
* Fix crash when using invalid primary stat in stat_per_primary. (Justin Jacobs)
* Fix crash when a book contains an invalid image filename. (Justin Jacobs)
* Don't spam "Entity stuck" message while pushing an entity out of a bad tile. (Justin Jacobs)
* Keyboard key names such as "Backspace" and "Left Ctrl" can now be translated. (Justin Jacobs)

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (MOB2)
* Polish (pl) update (Pawonashi)
* Russian (ru) fix (Igor Paliychuk)
* Ukranian (uk) update (Микола Франчук)



Flare v1.01 (http://flarerpg.org/index.php/2018/03/31/flare-1-01/)

Engine features:

* Add "Renderer" option to the Video section of the Configuration menu. (Justin Jacobs)
* Support loading some hard-coded Configuration menu values from menus/config.txt. (Justin Jacobs)
* Add WidgetSettings class for loading previously hard-coded properties of some Widgets. (Justin Jacobs)
* Add support for changing the buyback price after the player leaves the map. (Justin Jacobs)
* Add ability for certain classes to open a specific tab of the Powers menu automatically. (Justin Jacobs)
* Add 'respec' Event component for resetting XP/stats/powers. (Justin Jacobs)
* Add 'no_aggro' Power attribute. (Justin Jacobs)

Engine fixes:
