@@ -4,6 +4,7 @@ Engine features:
 
 * Support multiple campaign statuses for requirements in engine/titles.txt. (Justin Jacobs)
 * Buttons that trigger Events can now be added to books. (Justin Jacobs)
+* Add ability to control image display in books via campaign status. (Justin Jacobs)
 
 Engine fixes:
 
